# battle-city

./: .gitignore  CMakeLists.txt  main.cpp
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
